--- a/css/style.css
+++ b/css/style.css
@@ -9,29 +9,32 @@ body {
 }
 
 .search-area {
-  width: 450px;
+  background-color: grey;
+  padding: 10px;
+}
+
+.list {
+  display: table;
   margin: 0 auto;
 }
 
-ul {
+ul#wikilist {
   list-style: none;
+  padding: 0;
 }
 
-li {
+ul#wikilist li {
   background-color: #46659F;
   padding: 5px;
+  margin: 5px;
   border-radius: 10px;
-  margin: 10px;
 }
 
-a:link, a:visited, a:hover, a:active { 
+a:link, a:visited, a:hover, a:active {
   color: #FFF;
   text-decoration: none;
 }
 
-.footer {
-   left:0px;
-   bottom:0px;
-   height:40px;
-   width:100%;
+.container-fluid {
+  min-height: calc(100vh - 140px);
 }
